# agv_project

./: .gitignore  AGV_ARM_SYSTEM_DATASHEET.md  GIAI_DOAN_3_KE_HOACH.docx  agv_docs.md  agv_firmware  cycloid_design.m  protocol_v2.md  skill.md  skills
BLDC/: Cycloid_box.SLDPRT  Part2.SLDPRT  test_cycloid.SLDASM
agv_firmware/: .cproject  .mxproject  .project  AGV_CODE_ARCHITECTURE_AND_ALGORITHMS.md  AGV_STARTUP_AND_LOCALIZATION_GUIDE.md  README.md  STM32H563ZITX_FLASH.ld  STM32H563ZITX_RAM.ld  agv_firmware Debug.launch  agv_firmware.ioc
agv_firmware/Debug/: agv_firmware.elf  agv_firmware.list  agv_firmware.map  makefile  objects.list
arm/: .gitignore  ARM_STARTUP_AND_ALGORITHMS_GUIDE.md
arm/Firmware8115/: .cproject  .mxproject  .project  Firmware8115.ioc
arm/arm_firmware/: .cproject  .project  arm_firmware Debug.launch  arm_firmware.ioc
arm/arm_firmware_left/: .cproject  .project  arm_firmware_left Debug.launch  arm_firmware_left.ioc
arm/arm_firmware_right/: .cproject  .mxproject  .project  arm_firmware_right Debug.launch  arm_firmware_right.ioc
esp32_gateway/: README.md  esp32_gateway.ino
esp32_sensor_hub/: esp32_sensor_hub.ino
ros2_hybrid/: README.md  docker-compose.yml  make_teacher_dataset.sh  run_rviz.sh  train_custom.sh  view_custom.sh
ros2_hybrid/ros2_ws/src/agv_arm_bridge/: package.xml  setup.cfg  setup.py
ros2_hybrid/ros2_ws/src/agv_arm_bridge/agv_arm_bridge/: __init__.py  agv_arm_planner.py  java_udp_bridge.py
ros2_hybrid/ros2_ws/src/agv_arm_bridge/launch/: java_udp_bridge.launch.py
ros2_hybrid/ros2_ws/src/agv_arm_bridge/resource/: agv_arm_bridge
ros2_hybrid/ros2_ws/src/agv_arm_description/: package.xml  setup.cfg  setup.py
ros2_hybrid/ros2_ws/src/agv_arm_description/agv_arm_description/: __init__.py  generate_urdf.py  java_style_joint_gui.py
ros2_hybrid/ros2_ws/src/agv_arm_description/config/: agv_arm_geometry.yaml
ros2_hybrid/ros2_ws/src/agv_arm_description/launch/: display.launch.py
ros2_hybrid/ros2_ws/src/agv_arm_description/resource/: agv_arm_description
ros2_hybrid/ros2_ws/src/agv_arm_description/rviz/: display.rviz
ros2_hybrid/ros2_ws/src/agv_arm_description/urdf/: README.md
ros2_hybrid/ros2_ws/src/agv_arm_moveit/: CMakeLists.txt  package.xml
ros2_hybrid/ros2_ws/src/agv_arm_moveit/config/: agv_dual_arm.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
ros2_hybrid/ros2_ws/src/agv_arm_moveit/launch/: full_stack.launch.py  move_group.launch.py
ros2_hybrid/ros2_ws/src/agv_arm_moveit/src/: moveit_planner.cpp
(+510 files in other folders)
