<?xml version="1.0"?>
<package format="3">
  <name>agv_arm_bridge</name>
  <version>0.1.0</version>
  <description>Hybrid bridge between the Java arm UI and ROS 2 planning nodes.</description>
  <maintainer email="dev@example.com">AGV Project</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
