<?xml version="1.0"?>
<package format="3">
  <name>agv_arm_description</name>
  <version>0.1.0</version>
  <description>Configurable dual-arm AGV robot description for ROS 2 and MoveIt 2.</description>
  <maintainer email="dev@example.com">AGV Project</maintainer>
  <license>MIT</license>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
